<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.musto.agendatest.Login"
    android:background="#FF9900">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#FF9900">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Login"
            android:id="@+id/textLogin"
            android:textSize="30dp"
            android:textStyle="bold|italic"
            android:textColor="#FFFFFF"
            android:layout_marginTop="120dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/editUsername"
            android:layout_alignRight="@+id/editUsername" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:id="@+id/textUsername"
            android:textColor="#FFFFFF"
            android:layout_above="@+id/editUsername"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:id="@+id/textPassword"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/textUsername"
            android:textColor="#FFFFFF" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editUsername"
            android:layout_above="@+id/textPassword"
            android:layout_alignRight="@+id/editPass"
            android:layout_alignLeft="@+id/editPass" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editPass"
            android:layout_below="@+id/textPassword"
            android:layout_alignRight="@+id/buttonLogin"
            android:layout_alignLeft="@+id/buttonLogin" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Autentica"
            android:id="@+id/buttonLogin"
            android:layout_marginBottom="67dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#FF9933"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="Impossibile contattare il server"
            android:textColor="#0a0a0a" />
    </RelativeLayout>



</RelativeLayout>

