...
            android:layout_below="@+id/textViewEventi"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonRefresh"
            android:src="@drawable/ic_refresh"
            android:background="@color/buttonAddRem"
            android:layout_alignTop="@+id/imageButtonAdd"
            android:layout_alignParentEnd="true" />

        <TextView
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modifica"
            android:textColor="@color/textColor"
            android:id="@+id/textViewEdit"
            android:layout_above="@+id/imageButtonEdit"
            android:layout_alignEnd="@+id/imageButtonEdit" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonEdit"
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modifica ora:"
            android:id="@+id/modifica_ora"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/edit_data"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modifica luogo:"
            android:id="@+id/modifica_luogo"
            android:layout_below="@+id/edit_ora"
            android:layout_marginTop="36dp"
            android:layout_alignEnd="@+id/buttonAnnullaModifica"
            android:layout_alignParentStart="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modifica descrizione:"
            android:id="@+id/modifica_descrizione"
            android:layout_alignBottom="@+id/edit_descrizione"
            android:layout_alignParentStart="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modifica note aggiuntive:"
            android:id="@+id/modifica_note"
            android:layout_alignTop="@+id/edit_note"
            android:layout_alignEnd="@+id/buttonAnnullaModifica" />


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:layout_above="@+id/buttonAnnullaModifica"
            android:layout_alignEnd="@+id/buttonAnnullaModifica" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_nome"
            android:layout_above="@+id/modifica_data"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/buttonAnnullaModifica" />

        <EditText
            android:layout_width="wrap_content"
...
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/modifica_data" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_luogo"
            android:layout_alignBottom="@+id/modifica_luogo"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/modifica_luogo" />


        <EditText
...
