...
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonSalva"
            android:src="@drawable/ic_save"
            android:background="@color/buttonAddRem"
            android:layout_marginLeft="59dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/imageButtonAnnulla"
            android:layout_marginBottom="39dp" />
...
